# intro-to-kubernetes

./: .gitignore  docker-compose.yml
0_preparations/: README.md
1_basic_kubectl/: README.md
2_basic_resources/: 0_pod.yaml  1_deployment.yaml  2_full_deployment.yaml  README.md
3_helm/: README.md
4_configuring_helm/: README.md
5_useful_commands/: README.md
testapp/: Dockerfile  main.py  pyproject.toml
