[tool.poetry]
name = "FastAPI Demo"
version = "0.1.0"
description = "FastAPI Demo"
authors = ["Watt Iamsuri <wiamsuri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.18.2"
fastapi = "0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
